cmake_minimum_required(VERSION 3.23)
project(278_Lab2)

set(CMAKE_CXX_STANDARD 14)

add_executable(Queue-ArrayVersion1 Queue-ArrayVersion1.c)
add_executable(Queue-ArrayVersion2 Queue-ArrayVersion2.c)
add_executable(Queue-ArrayVersion3 Queue-ArrayVersion1.c)
add_executable(Queue-IncludeVersion Queue-IncludeVersion.c)
add_executable(Queue-LinkListVersion Queue-LinkListVersion.c)

add_executable(Stack-ArrayVersion00 Stack-ArrayVersion00.c)
add_executable(Stack-ArrayVersion01 Stack-ArrayVersion01.c)
add_executable(Stack-BracketChecker Stack-BracketChecker.c)
add_executable(Stack-LinkListVersion00 Stack-LinkListVersion00.c)
add_executable(Stack-MultiInstance Stack-MultiInstance.c)
add_executable(Stack-Strings Stack-Strings.c)
add_executable(Stack-UsingQ Stack-UsingQ.c)
add_executable(stackproblem stackproblem.c)

